--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       </div>
       <div id="morse-code-device"></div>
       <div id="lightRoom2" class="light small-room"></div>
+      <div id="lightSwitchLabel"></div>
 
 
       <div id="room3" class="room big-room">
@@ -95,6 +96,9 @@
          <h2>Rucksack</h2>
          <div id="morse-code-bag">
             <div class="morse-code-image"></div>
+         </div>
+         <div id="lightSwitchLabel-bag">
+            <div class="lightSwitchLabel-image"></div>
          </div>
       </div>
    </div>
