--- a/index.html
+++ b/index.html
@@ -32,23 +32,32 @@
          <div class="pc"></div>
       </div>
       <div id="morse-code"></div>
+      <div id="rommNr1"><p>1</p></div>
 
 
       <div id="room2" class="room small-room">
-         <div class="door door-2" data-state="open"></div>
+         <div class="door door-2" data-state="close"></div>
       </div>
       <div id="morse-code-device"></div>
       <div id="lightRoom2" class="light small-room"></div>
       <div id="lightSwitchLabel"></div>
+      <div id="rommNr2"><p>2</p></div>
 
 
       <div id="room3" class="room big-room">
-         <div class="door door-3" data-state="open"></div>
+         <div class="door door-3" data-state="close"></div>
       </div>
       <div id="lightRoom3" class="light"></div>
       <div id="lightSwitch"></div>
       <div id="table-dining"></div>
       <div id="schrank"></div>
+      <div id="wardrobe-open">
+         <div id="wardrobe-light"></div>
+         <div id="rfid-chip"></div>
+      </div>
+      <div id="reader"></div>
+      <div id="alarmLamp"></div>
+      <div id="rommNr3"><p>3</p></div>
 
       <div id="hexagon1"></div>
       <div id="hexagon2"></div>
@@ -99,6 +108,8 @@
          </div>
          <div id="lightSwitchLabel-bag">
             <div class="lightSwitchLabel-image"></div>
+         </div>
+         <div id="rfid-chip-bag">
          </div>
       </div>
    </div>
