--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
          <div class="door door-1" data-state="open"></div>
          <div id="mirrorLine"></div>
       </div>
-      <div id="computer">
+      <div id="pc-table">
          <div class="pc"></div>
       </div>
+      <div id="pc-chair"></div>
+      <div id="mirror-puzzle-help"></div>
       <div id="morse-code"></div>
       <div id="rommNr1"><p>1</p></div>
 
@@ -67,6 +69,9 @@
    </div>
 
    <div id="control">
+      <div id="time">
+         <h2>Time: 00:00</h2>
+      </div>
       <div id="control-box">
          <h2>Steuerung</h2>
 
