--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       <div id="lightRoom2" class="light small-room"></div>
       <div id="lightSwitchLabel"></div>
       <div id="rommNr2"><p>2</p></div>
+      <div id="pc-table2">
+         <div id="printer"></div>
+         <div id="notes"></div>
+         <div id="morseCode-puzzle-help"></div>
+      </div>
 
 
       <div id="room3" class="room big-room">
