--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <div id="reader"></div>
       <div id="alarmLamp"></div>
       <div id="rommNr3"><p>3</p></div>
+      <div id="wardrobe-puzzle-help"></div>
 
       <div id="hexagon1"></div>
       <div id="hexagon2"></div>
@@ -81,30 +82,29 @@
          <h2>Steuerung</h2>
 
          <p class="control-text">
-            <img src="images/control/arrow-keys-left.png" width="30" alt="" />
-            - Links
+            <img src="images/control/arrow-keys-left.png" width="30" alt="" /> Links
          </p>
 
          <p class="control-text">
-            <img src="images/control/arrow-keys-right.png" width="30" alt="" />
-            - Rechts
+            <img src="images/control/arrow-keys-right.png" width="30" alt="" /> Rechts
          </p>
 
          <p class="control-text">
-            <img src="images/control/arrow-keys-up.png" width="30" alt="" />
-            - Oben
+            <img src="images/control/arrow-keys-up.png" width="30" alt="" /> Oben
          </p>
 
          <p class="control-text">
-            <img src="images/control/arrow-keys-down.png" width="30" alt="" />
-            - Unten
+            <img src="images/control/arrow-keys-down.png" width="30" alt="" /> Unten
          </p>
 
          <hr />
 
          <p class="control-text">
-            <img src="images/control/enter-key.png" height="30" alt="" /> -
-            Aktion
+            <img src="images/control/space_bar.png" height="30" alt="" /> Aktion
+         </p>
+
+         <p class="control-text">
+            <img src="images/control/mouse.png" height="30" alt="" /> aufnehmen / vergrößern
          </p>
 
          <p class="control-text"></p>
