--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
          </p>
 
          <p class="control-text">
-            <img src="images/control/mouse.png" height="30" alt="" /> aufnehmen / vergrößern
+            <img src="images/control/mouse.png" height="30" alt="" />Aufnehmen<br>Rucksack vergrößern
          </p>
 
          <p class="control-text"></p>
