--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div id="alarmLamp"></div>
       <div id="rommNr3"><p>3</p></div>
       <div id="wardrobe-puzzle-help"></div>
+      <div id="candle"></div>
 
       <div id="hexagon1"></div>
       <div id="hexagon2"></div>
