--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div id="mirror">
          <div id="player-background"></div>
-         <p>PW2<br />trowssap</p>
+         <p>PW2<br /><span id="pw-door-2"></span></p>
       </div>
 
       <div id="room1" class="room small-room">
