del ordner für glaser

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
          </p>
 
          <p class="control-text">
-            <img src="images/control/mouse.png" height="30" alt="" />Aufnehmen<br>Rucksack vergrößern
+            <img src="images/control/mouse.png" height="30" alt="" />Aufnehmen<br>Hinweis vergrößern
          </p>
 
          <p class="control-text"></p>
@@ -113,7 +113,7 @@
 
       <div id="items">
          <hr />
-         <h2>Rucksack</h2>
+         <h2>Hinweise</h2>
          <div id="morse-code-bag">
             <div class="morse-code-image"></div>
          </div>
