--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <div class="pc"></div>
       </div>
       <div id="pc-chair"></div>
-      <div id="mirror-puzzle-help"></div>
+      <div id="puzzle-helper-room1"></div>
       <div id="morse-code"></div>
       <div id="rommNr1"><p>1</p></div>
 
@@ -47,7 +47,7 @@
       <div id="pc-table2">
          <div id="printer"></div>
          <div id="notes"></div>
-         <div id="morseCode-puzzle-help"></div>
+         <div id="puzzle-helper-room2"></div>
       </div>
 
 
@@ -65,7 +65,7 @@
       <div id="reader"></div>
       <div id="alarmLamp"></div>
       <div id="rommNr3"><p>3</p></div>
-      <div id="wardrobe-puzzle-help"></div>
+      <div id="puzzle-helper-room3"></div>
       <div id="candle"></div>
 
       <div id="hexagon1"></div>
