--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
    </div>
 
    <div id="control">
+      <div>
+         <button type="button" class="blue-btn" id="video-btn">Video zum Microcontroller</button>
+      </div>
       <div id="time">
          <h2>Time: 00:00</h2>
       </div>
