--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+   <div id="scoreboard">
+      <h2>Spielerliste</h2>
+      <div id="player-list"></div>
+   </div>
+
    <div id="escaperoom">
       <div class="jumbotron"></div>
       
